<resources>
    <string name="app_name">Reddit</string>
    <string name="sign_in">Sign In</string>
    <string name="signIn">Sign In</string>
    <string name="forgot_password"><u>Forgot Password</u></string>
    <string name="enter_your_email">vikasaroy</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="char_length">(Password must be atlest 8 characters long)</string>
    <string name="text_hint">********</string>
    <string name="hint">Search Sub-Reddits</string>
    <string name="popular">Popular Reddits</string>
    <string name="posts">POSTS</string>
</resources>
